--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Welcome to Tomcat Maven Application Home Page!</h1>
-        <h2>Deployed to both lab servers</h2>
+        <h2>Deployed to both lab servers-dev</h2>
     </body>
 </html>
